fixed bug x overflow

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,5 +30,6 @@ body {
     font-weight: 300;
     line-height: 1.6;
     position: relative;
+    overflow-x: hidden;
     width: 100%;
 }
