--- a/sass/main.css
+++ b/sass/main.css
@@ -1280,6 +1280,7 @@ body {
   font-weight: 300;
   line-height: 1.6;
   position: relative;
+  overflow-x: hidden;
   width: 100%;
 }
 
